[package]
name = "the-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units=1
opt-level = 'z'

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units=1

[dependencies]
bytes-kman = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
cpal = { version = "0.15", features = ["num-traits"] }
eframe = { version = "0.22", features = ["persistence", "ron", "wayland", "wgpu"] }
egui_dock = { version = "0.6", features = ["serde"] }
env_logger = "0.10.0"
libp2p = { version = "0.51", features = ["full"] }
log = "0.4"
ron = "0.8"
serde = "1.0" 
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "sync"] }
audiopus = "0.3.0-rc.0"