[package]
name = "the-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units=1
opt-level = 'z'

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.release.package."*"]
opt-level = 3
codegen-units=1

[dependencies]
bytes-kman = "0.3.0"
chrono = { version = "0.4", features = ["serde"] }
cpal = { version = "0.15", features = ["num-traits"] }
# eframe = { version = "0.22", features = ["persistence", "ron", "wayland"] }
egui_dock = { version = "0.6", features = ["serde"] }
env_logger = "0.10.0"
libp2p = { version = "0.51", features = ["full"] }
log = "0.4"
ron = "0.8"
serde = "1.0" 
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "sync"] }
audiopus = "0.3.0-rc.0"
winit = "0.28.6"
glow = "0.12.2"
egui = "0.22.0"
glutin = "0.30.9"
glutin-winit = "0.3.0"
egui-winit = "0.22.0"
egui_glow = "0.22.0"
raw-window-handle = "0.5.2"
dirs = "5.0.1"
